dnl Process this file with autoconf to produce a configure script.

AC_INIT(source/engine/engine.cpp)

MAJOR_VERSION=0
MINOR_VERSION=94
VERSION=$MAJOR_VERSION.$MINOR_VERSION
PACKAGE="sphere"

AC_SUBST(MAJOR_VERSION)
AC_SUBST(MINOR_VERSION)
AC_SUBST(VERSION)
AC_SUBST(PACKAGE)

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

dnl Checks for programs.

AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_MAKE_SET
AC_PROG_RANLIB

dnl extras

DATADIR="${datadir}/sphere"
AC_SUBST(DATADIR)

AC_ARG_ENABLE(debug, [  --enable-debug          Enable debugging support ],
if test "$enableval" = "yes"; then
   CXXFLAGS="${CXXFLAGS} -g"
fi)
AC_ARG_WITH(data, [  --with-data=DIR     Default Sphere data directory ],
if test -d $withval; then
  AC_DEFINE_UNQUOTED(DATADIR, $enableval)
else
  AC_MSG_ERROR(The directory $withval could not be found, please create it before running configure)
fi)

dnl Checks for libraries.

AM_PATH_SDL(1.2.0)
AC_CHECK_LIB(z, zlibVersion,,
   AC_MSG_ERROR(could not find the z library))
AC_CHECK_LIB(png, png_access_version_number,,
   AC_MSG_ERROR(could not find the png library))
AC_CHECK_LIB(jpeg, jpeg_start_compress,,
   AC_MSG_ERROR(could not find the jpeg library))
AC_CHECK_LIB(mng, mng_initialize,,
   AC_MSG_ERROR(could not find the mng library))
AC_CHECK_LIB(js, JS_PushArguments,,
   AC_MSG_ERROR(could not find the js library))

dnl Checks for header files.

AC_HEADER_STDC
AC_CHECK_HEADER(arpa/inet.h)
AC_CHECK_HEADER(dirent.h)
AC_CHECK_HEADER(errno.h)
AC_CHECK_HEADER(fcntl.h)
AC_CHECK_HEADER(glob.h)
AC_CHECK_HEADER(netdb.h)
AC_CHECK_HEADER(netinet/in.h)
AC_CHECK_HEADER(sys/socket.h)
AC_CHECK_HEADER(sys/stat.h)
AC_CHECK_HEADER(unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.

AC_C_CONST

dnl Checks for library functions.

AC_CHECK_FUNCS(getcwd)

CXXFLAGS="$SDL_CFLAGS $CXXFLAGS -DXP_UNIX"
LIBS="$SDL_LIBS $LIBS"

AC_OUTPUT(Makefile source/Makefile source/common/Makefile \
  source/engine/Makefile source/engine/unix/Makefile \
  source/jpegwrap/Makefile)
