dnl Process this file with autoconf to produce a configure script.

AC_INIT(source/engine/engine.cpp)

MAJOR_VERSION=0
MINOR_VERSION=97
VERSION=$MAJOR_VERSION.$MINOR_VERSION
PACKAGE="sphere"

AC_SUBST(MAJOR_VERSION)
AC_SUBST(MINOR_VERSION)
AC_SUBST(VERSION)
AC_SUBST(PACKAGE)

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

dnl Checks for programs.

AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_MAKE_SET
AC_PROG_RANLIB

dnl extras

AC_LANG(C++)
AC_ARG_ENABLE(debug, [  --enable-debug          Enable debugging support ],
if test "$enableval" = "yes"; then
   CXXFLAGS="${CXXFLAGS} -g"
fi)
AC_ARG_WITH(data, [  --with-data=DIR     Default Sphere data directory ],
if test -d $withval; then
  SPHERE_DATA=$withval
  AC_DEFINE_UNQUOTED(DATADIR, "$withval")
else
  AC_MSG_ERROR(Please create the directory $withval before running configure)
fi)

AC_SUBST(SPHERE_DATA)

dnl Checks for libraries.

dnl custom SDL check by jcore (other SDL checks don't work on my system)
AC_MSG_CHECKING(for SDL > 1.2.0)
if sdl-config --version > /dev/null ; then
	AC_MSG_RESULT(yes)
	SDL_CFLAGS=`sdl-config --cflags`
	SDL_LIBS=`sdl-config --libs`
	AC_SUBST(SDL_CFLAGS)
	AC_SUBST(SDL_LIBS)
	CFLAGS="$SDL_CFLAGS $CFLAGS"
	CXXFLAGS="$SDL_CFLAGS $CXXFLAGS"
	LIBS="$SDL_LIBS $LIBS"
	AC_TRY_RUN([
#include "SDL_version.h"

int main () {
	if (SDL_MAJOR_VERSION < 1)
		return 1;
	if (SDL_MAJOR_VERSION > 1)
		return 0;
	if (SDL_MINOR_VERSION < 2)
		return 1;
	if (SDL_MINOR_VERSION > 2)
		return 0;
  return 0;
}
],,AC_MSG_ERROR(A version of SDL prior to 1.2.0 was found.  Please updgrade your SDL library.))
else
	AC_MSG_RESULT(no)
	AC_MSG_ERROR(sdl-config --version failed to run.  Check to make sure that sdl-config is in your PATH.)
fi

AC_CHECK_LIB(z, zlibVersion,,
   AC_MSG_ERROR(could not find the z library))
AC_CHECK_LIB(mng, mng_initialize,,
   AC_MSG_ERROR(could not find the mng library))
AC_CHECK_LIB(js, JS_PushArguments,,
   AC_MSG_ERROR(could not find the js library))
AC_CHECK_LIB(corona, CorConvertImage,,
   AC_MSG_ERROR(could not find the corona library))
dnl Checks for header files.

AC_HEADER_STDC
AC_CHECK_HEADER(arpa/inet.h)
AC_CHECK_HEADER(dirent.h)
AC_CHECK_HEADER(errno.h)
AC_CHECK_HEADER(fcntl.h)
AC_CHECK_HEADER(glob.h)
AC_CHECK_HEADER(netdb.h)
AC_CHECK_HEADER(netinet/in.h)
AC_CHECK_HEADER(sys/socket.h)
AC_CHECK_HEADER(sys/stat.h)
AC_CHECK_HEADER(unistd.h)
AC_CHECK_HEADER(audiere.h)
dnl Checks for typedefs, structures, and compiler characteristics.

AC_C_CONST

dnl Checks for library functions.

AC_CHECK_FUNCS(getcwd)

CXXFLAGS="$SDL_CFLAGS $CXXFLAGS -DXP_UNIX"
LIBS="$SDL_LIBS $LIBS"

AC_OUTPUT(
        Makefile
        source/Makefile
        source/common/Makefile
        source/engine/Makefile
        source/engine/unix/Makefile
)
