dnl Process this file with autoconf to produce a configure script.

AC_INIT(source/engine/engine.cpp)
AC_CONFIG_AUX_DIR(config)

MAJOR_VERSION=0
MINOR_VERSION=97
PATCH_VERSION=0
VERSION=$MAJOR_VERSION.$MINOR_VERSION.$PATCH_VERSION
PACKAGE="sphere"

AC_SUBST(MAJOR_VERSION)
AC_SUBST(MINOR_VERSION)
AC_SUBST(PATCH_VERSION)
AC_SUBST(VERSION)
AC_SUBST(PACKAGE)

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

dnl Checks for programs.

AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_MAKE_SET
AC_PROG_LIBTOOL

dnl extras

AC_ARG_ENABLE(debug,
  AC_HELP_STRING(--enable-debug, Enable debugging support),
  CXXFLAGS="${CXXFLAGS} -g"
  AC_DEFINE(DEBUG))
AC_ARG_WITH(data,
  AC_HELP_STRING(--with-data=DIR, Default Sphere data directory),
if test -d $withval; then
  SPHERE_DATA=$withval
  AC_DEFINE_UNQUOTED(DATADIR, "$withval")
  AC_SUBST(SPHERE_DATA)
else
  AC_MSG_ERROR(Please create the directory $withval before running configure)
fi)

dnl Checks for libraries.

AM_PATH_SDL(1.2.0,,
    AC_MSG_ERROR(SDL 1.2.0 or greater not found))
AC_CHECK_LIB(z, zlibVersion,,
    AC_MSG_ERROR(could not find the z library))
AC_CHECK_LIB(mng, mng_initialize,,
    AC_MSG_ERROR(could not find the mng library))
AC_CHECK_LIB(js, JS_PushArguments,,
    AC_MSG_ERROR(could not find the js library))
AC_CHECK_LIB(corona, CorConvertImage,,
    AC_MSG_ERROR(could not find the corona library))

dnl Checks for header files.

AC_HEADER_STDC
AC_CHECK_HEADER(arpa/inet.h)
AC_CHECK_HEADER(dirent.h)
AC_CHECK_HEADER(errno.h)
AC_CHECK_HEADER(fcntl.h)
AC_CHECK_HEADER(glob.h)
AC_CHECK_HEADER(netdb.h)
AC_CHECK_HEADER(netinet/in.h)
AC_CHECK_HEADER(sys/socket.h)
AC_CHECK_HEADER(sys/stat.h)
AC_CHECK_HEADER(unistd.h)
AC_CHECK_HEADER(audiere.h)

dnl Checks for typedefs, structures, and compiler characteristics.

AC_C_CONST

dnl Checks for library functions.

AC_CHECK_FUNCS(getcwd)

dnl Finish up build configuration and output makefiles.

CFLAGS="$CFLAGS $SDL_CFLAGS"
CXXFLAGS="$CXXFLAGS $SDL_CFLAGS"
LIBS="$LIBS $SDL_LIBS"

AC_DEFINE(XP_UNIX)

AC_OUTPUT(
        Makefile
        source/Makefile
        source/common/Makefile
        source/engine/Makefile
        source/engine/unix/Makefile
)
