dnl Process this file with autoconf to produce a configure script.

AC_INIT(unix/unix_filesystem.cpp)

MAJOR_VERSION=0
MINOR_VERSION=93
VERSION=$MAJOR_VERSION.$MINOR_VERSION
PACKAGE="sphere"

AC_SUBST(MAJOR_VERSION)
AC_SUBST(MINOR_VERSION)
AC_SUBST(VERSION)
AC_SUBST(PACKAGE)

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

dnl Checks for programs.

AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_MAKE_SET
AC_PROG_RANLIB

dnl Checks for programs.

dnl Checks for libraries.

dnl custom SDL check by jcore (other SDL checks don't work on my system)
AC_MSG_CHECKING(for SDL > 1.2.0)
if sdl-config --version > /dev/null ; then
	AC_MSG_RESULT(yes)
	SDL_CFLAGS=`sdl-config --cflags`
	SDL_LIBS=`sdl-config --libs`
	AC_SUBST(SDL_CFLAGS)
	AC_SUBST(SDL_LIBS)
	CFLAGS="$SDL_CFLAGS $CFLAGS"
	CXXFLAGS="$SDL_CFLAGS $CXXFLAGS"
	LIBS="$SDL_LIBS $LIBS"
	AC_TRY_RUN([
#include "SDL_version.h"

int main () {
	if (SDL_MAJOR_VERSION < 1)
		return 1;
	if (SDL_MAJOR_VERSION > 1)
		return 0;
	if (SDL_MINOR_VERSION < 2)
		return 1;
	if (SDL_MINOR_VERSION > 2)
		return 0;
  return 0;
}
],,AC_MSG_ERROR(A version of SDL prior to 1.2.0 was found.  Please updgrade your SDL library.))
else
	AC_MSG_RESULT(no)
	AC_MSG_ERROR(sdl-config --version failed to run.  Check to make sure that sdl-config is in your PATH.)
fi

dnl Checks for header files.

AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADER(unistd.h)
AC_CHECK_HEADER(zlib.h,,AC_MSG_RESULT(using included...)
  cp ../third-party/zlib.h .)
AC_CHECK_HEADER(png.h,,AC_MSG_RESULT(using included...)
  cp ../third-party/png.h .)
AC_CHECK_HEADER(jpeglib.h,,AC_MSG_RESULT(using included...)
  cp ../third-party/jpeglib.h .)
AC_CHECK_HEADER(libmng.h,,AC_MSG_RESULT(using included...)
  cp ../third-party/libmng.h .)

dnl Checks for typedefs, structures, and compiler characteristics.

AC_C_CONST

dnl Checks for library functions.

AC_CHECK_FUNCS(getcwd)

SRCDIR=`pwd`
AC_SUBST(SRCDIR)

CFLAGS="$CFLAGS -DXP_UNIX"
CXXFLAGS="$CXXFLAGS -DXP_UNIX"

AC_OUTPUT(Makefile unix/Makefile)
